--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ dependencies = [
     "sqlalchemy-orm (>=1.2.10,<2.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "colorama (>=0.4.6,<0.5.0)",
-    "fastapi (>=0.115.11,<0.116.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)"
+    "fastapi[standard] (>=0.115.11,<0.116.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)"
 ]
 
 
