--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,16 @@ pydantic-settings = "^2.7.1"
 fastapi-mail = "^1.4.2"
 slowapi = "^0.1.9"
 cloudinary = "^1.42.1"
+pytest-asyncio = "^0.26.0"
+aiosqlite = "^0.21.0"
+pytest-cov = "^6.1.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = "."
+filterwarnings = "ignore::DeprecationWarning"
+asyncio_default_fixture_loop_scope = "function"
