--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ aiosqlite = "^0.21.0"
 pytest-cov = "^6.1.0"
 
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.2.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
