--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,6 @@ build-backend = "poetry.core.masonry.api"
 pythonpath = "."
 filterwarnings = "ignore::DeprecationWarning"
 asyncio_default_fixture_loop_scope = "function"
+
+[tool.coverage.run]
+omit = ["src/services/upload_file.py", "src/api/utils.py", "src/database/db.py"]
