--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ cloudinary = "^1.42.1"
 pytest-asyncio = "^0.26.0"
 aiosqlite = "^0.21.0"
 pytest-cov = "^6.1.0"
+redis = "^5.2.1"
+redis-lru = "^0.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
